mod directory structure and etc...
